@@ -1,3 +1,11 @@
+2010-05-19  Josep Joan Ribas  <jribas@flumotion.com>
+
+	reviewed by: xqueralt
+
+	* flumotion/component/producers/fms/fms.py:
+	Prevent FMLE from sending too many audio packets downstream
+	to prevent synchronization issues.
+
 2010-03-26  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
 	reviewed by: Julien LeGoff
